--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="manifest" href="/manifest.webmanifest" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="theme-color" content="#1976d2" />
     <link rel="apple-touch-icon" href="/pwa-192x192.png" />
   </head>
